--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "@repo/frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,7 +11,12 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@ts-rest/core": "^3.33.0",
+    "@ts-rest/react-query": "^3.33.0",
+    "@tanstack/react-query": "^5.24.1",
+    "@repo/api": "workspace:*",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
