--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,3 +1,4 @@
 PORT: 3000
-MOVIEDB_URL: https://api.themoviedb.org/3
+MOVIEDB_API_URL: https://api.themoviedb.org/3
+MOVIEDB_IMAGE_URL: https://image.tmdb.org/t/p
 MOVIEDB_API_KEY: <your_api_key>
