--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@repo/api": "workspace:*",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.24.1",
     "@ts-rest/core": "^3.33.0",
     "@ts-rest/react-query": "^3.33.0",
