--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -17,6 +17,7 @@
     "fastify": "^4.26.1",
     "http-graceful-shutdown": "^3.1.13",
     "pino": "^8.19.0",
+    "redis": "^4.6.13",
     "zod": "^3.22.4"
   },
   "devDependencies": {
