--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,47 @@
-# docker compose v3 config for a redis server
-version: "3"
+version: "3.9"
 services:
   redis:
+    container_name: redis
+    profiles:
+      - "dev"
+      - "localstack"
     image: redis/redis-stack-server:latest
     ports:
       - "6379:6379"
+    networks:
+      - dependency_network
+
+  backend:
+    container_name: backend
+    profiles:
+      - "localstack"
+    depends_on:
+      - redis
+    build:
+      context: .
+      dockerfile: ./apps/backend/Dockerfile
+    env_file:
+      - ./apps/backend/docker.env
+    restart: always
+    ports:
+      - 3000:3000
+    networks:
+      - app_network
+      - dependency_network
+
+  frontend:
+    container_name: frontend
+    profiles:
+      - "localstack"
+    build:
+      context: .
+      dockerfile: ./apps/frontend/Dockerfile
+    restart: always
+    ports:
+      - 3001:80
+
+networks:
+  app_network:
+    driver: bridge
+  dependency_network:
+    driver: bridge
