--- a/apps/backend/docker.env.example
+++ b/apps/backend/docker.env.example
@@ -1,5 +1,5 @@
 PORT: 3000
 MOVIEDB_API_URL: https://api.themoviedb.org/3
 MOVIEDB_IMAGE_URL: https://image.tmdb.org/t/p
-MOVIEDB_API_KEY: <your_api_key>
-REDIS_URL: redis://localhost:6379
+MOVIEDB_API_KEY: <API_KEY>
+REDIS_URL: redis://redis:6379
