--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "add-component": "shadcn-ui add",
-    "preview": "vite preview"
+    "start": "vite preview --port=3001"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
