--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,6 +6,7 @@
     "start": "node dist/index.js",
     "dev": "nodemon",
     "build": "esbuild --bundle src/index.ts --outdir=dist --platform=node --target=node20 --sourcemap",
+    "test": "vitest run",
     "lint": "eslint --ext .ts src"
   },
   "dependencies": {
@@ -30,6 +31,8 @@
     "eslint": "^8.56.0",
     "nodemon": "^3.1.0",
     "tsx": "^4.7.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite": "^5.1.4",
+    "vitest": "^1.3.1"
   }
 }
